--- a/src/web/css/source/praxigento.less
+++ b/src/web/css/source/praxigento.less
@@ -1,5 +1,30 @@
-
 .page-wrapper {
-  background-color: #46d647;
+  background-color: #818181;
 }
+.navigation .level0 > .level-top:hover,
+.navigation .level0 > .level-top.ui-state-focus,
+a:hover, .alink:hover,
+a:visited, .alink:visited,
+{
+  color: #D91809;
+}
+
+.navigation .level0 > .level-top {
+  color: #474747;
+}
+
+.navigation ul,
+.nav-sections-item-content {
+  background: #D8D9DD;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#D8D9DD', endColorstr='#ECEFF2'); /* IE6-9 */
+  background: -webkit-gradient(linear, left top, left bottom, from(#D8D9DD), to(#ECEFF2));
+  background: -moz-linear-gradient(top,  #D8D9DD,  #ECEFF2); /* firefox 3.6+ */
+  background: -o-linear-gradient(top,  #D8D9DD,  #ECEFF2); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #D8D9DD,  #ECEFF2); /* IE10+ */
+}
+  body,
+  a, .alink
+  {
+    color: #D8D9DD;
+  }
 
