--- a/src/web/css/source/praxigento.less
+++ b/src/web/css/source/praxigento.less
@@ -27,4 +27,12 @@ a:visited, .alink:visited,
   {
     color: #D8D9DD;
   }
-
+.page-wrapper .page-header {
+  margin-top: 78px;
+}
+.page-wrapper .nav-sections {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 150;
+}
