MOBI-408 # headers <-> links

--- a/src/view/frontend/templates/footer_links.phtml
+++ b/src/view/frontend/templates/footer_links.phtml
@@ -88,10 +88,10 @@ if ($this->getLinks()) {
         '<div class="prxgt-footer-links"><h4>Contacts</h4>'.$column[3].'</div>'.
         '<div class="prxgt-footer-links"><h4>Orders</h4>'.$column[4].'</div> </div>';
     $html .=
-        '<div class="prxgt-footer-links-small-size-block"> <div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4>Privacy</h4></div>'.$columnSmallSize[1].'</div>'.
-        '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4>Search</h4></div>'.$columnSmallSize[2].'</div>'.
-        '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4>Contacts</h4></div>'.$columnSmallSize[3].'</div>'.
-        '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4>Orders</h4></div>'.$columnSmallSize[4].'</div> </div>';
+        '<div class="prxgt-footer-links-small-size-block"> <div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Privacy</a></h4></div>'.$columnSmallSize[1].'</div>'.
+        '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Search</a></h4></div>'.$columnSmallSize[2].'</div>'.
+        '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Contacts</a></h4></div>'.$columnSmallSize[3].'</div>'.
+        '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Orders</a></h4></div>'.$columnSmallSize[4].'</div> </div>';
 }
 
 echo $html;
