--- a/src/Magento_Theme/layout/default.xml
+++ b/src/Magento_Theme/layout/default.xml
@@ -5,6 +5,9 @@
  */
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <link  src="Praxigento_Magento2Theme::js/prxgt_scripts.js" type='text/javascript'/>
+    </head>
     <body>
         <referenceContainer name="header-wrapper">
             <block class="Magento\Framework\View\Element\Template" name="top.search" as="topSearch" template="Magento_Search::form.mini.phtml" />
