--- a/src/view/frontend/templates/footer_links.phtml
+++ b/src/view/frontend/templates/footer_links.phtml
@@ -37,23 +37,7 @@ if ($this->getLinks()) {
         }
     }
     </style>' : '');
-    $html .= '
-<script type="text/javascript">
-    $(document).ready(function () {
-        var objToStick = $("#prxgt-footer-links-block"); //Получаем нужный объект
-        var topOfObjToStick = $(objToStick).offset().top; //Получаем начальное расположение нашего блока
-
-        $(window).scroll(function () {
-            var windowScroll = $(window).scrollTop(); //Получаем величину, показывающую на сколько прокручено окно
-
-            if (windowScroll > topOfObjToStick) { // Если прокрутили больше, чем расстояние до блока, то приклеиваем его
-                $(objToStick).addClass("prxgtTopWindow");
-            } else {
-                $(objToStick).removeClass("prxgtTopWindow");
-            };
-        });
-    });
-</script>';
+    $html .= '';
     $column[1] = '';
     $column[2] = '';
     $column[3] = '';
