--- a/src/view/frontend/templates/footer_links.phtml
+++ b/src/view/frontend/templates/footer_links.phtml
@@ -10,6 +10,28 @@ if ($this->getLinks()) {
     top: 0;
     z-index:9999;
     }
+    #prxgt-back-top-button {
+    position: fixed;
+    z-index:99;
+    bottom: 40px;
+    left: 50%;
+    margin-left: 635px;
+    /*display: none;*/
+    width: 41px;
+    height: 31px;
+    padding-top: 11px;
+    color: #000080;
+
+    background: #D8D9DD;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#D8D9DD\', endColorstr=\'#ECEFF2\');
+    background: -webkit-gradient(linear, left top, left bottom, from(#d8d9dd), to(#eceff2));
+    background: -moz-linear-gradient(top, #d8d9dd, #eceff2);
+    background: -o-linear-gradient(top, #d8d9dd, #eceff2);
+    background: -ms-linear-gradient(top, #d8d9dd, #eceff2);
+    }
+    #prxgt-back-top-button a {
+    padding-left: 10px;
+    }
     @media only screen and (min-width: 768px) {
         .prxgt-footer-links-block {
             padding-bottom: 140px;
@@ -92,7 +114,12 @@ if ($this->getLinks()) {
         '<div class="prxgt-footer-links-block" id="prxgt-footer-links-block"> <div class="prxgt-footer-links"><h4>Privacy</h4>'.$column[1].'</div>'.
         '<div class="prxgt-footer-links"><h4>Search</h4>'.$column[2].'</div>'.
         '<div class="prxgt-footer-links"><h4>Contacts</h4>'.$column[3].'</div>'.
-        '<div class="prxgt-footer-links"><h4>Orders</h4>'.$column[4].'</div> </div>';
+        '<div class="prxgt-footer-links"><h4>Orders</h4>'.$column[4].'</div>
+
+        <div id="prxgt-back-top-button" style="display: block;"><a title="Top" href="#top">Top</a></div>
+
+        </div>';
+
     $html .=
         '<div class="prxgt-footer-links-small-size-block"> <div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Privacy</a></h4></div>'.$columnSmallSize[1].'</div>'.
         '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Search</a></h4></div>'.$columnSmallSize[2].'</div>'.
