MOBI-422	 #  top button fix

--- a/src/view/frontend/templates/footer_links.phtml
+++ b/src/view/frontend/templates/footer_links.phtml
@@ -116,7 +116,7 @@ if ($this->getLinks()) {
         '<div class="prxgt-footer-links"><h4>Contacts</h4>'.$column[3].'</div>'.
         '<div class="prxgt-footer-links"><h4>Orders</h4>'.$column[4].'</div>
 
-        <div id="prxgt-back-top-button" style="display: block;"><a title="Top" href="#top">Top</a></div>
+        <div id="prxgt-back-top-button" style="display: none;"><a title="Top" href="#top">Top</a></div>
 
         </div>';
 
