--- a/src/view/frontend/templates/footer_links.phtml
+++ b/src/view/frontend/templates/footer_links.phtml
@@ -5,10 +5,13 @@ $html = '';
 if ($this->getLinks()) {
     $html .= ($this->hasCssClass() ? '
     <style>
-    .prxgtTopWindow {
+    .prxgtBottomLine {
     position: fixed;
-    top: 0;
-    z-index:9999;
+    z-index:99;
+    bottom: 0px;
+    padding-bottom: 0px;
+    width: 100%;
+    background-color: #818181;
     }
     #prxgt-back-top-button {
     position: fixed;
@@ -34,17 +37,22 @@ if ($this->getLinks()) {
     }
     @media only screen and (min-width: 768px) {
         .prxgt-footer-links-block {
-            padding-bottom: 140px;
+            /* padding-bottom: 140px; */
             display: block;
+            width: 80%;
         }
         .prxgt-footer-links-small-size-block {
-            padding-bottom: 140px;
+            /* padding-bottom: 140px; */
             display: none;
         }
         .prxgt-footer-links {
             float: left;
             margin-right: 1.5%;
-            width: 15%;
+            /* width: 100%; */
+            width: 20%;
+        }
+        .footer .bugs {
+        padding-bottom: 50px;
         }
     }
     @media only screen and (max-width: 767px) {
@@ -110,15 +118,33 @@ if ($this->getLinks()) {
     $columnSmallSize[3] .= '</ul>';
     $columnSmallSize[4] .= '</ul>';
 
+    /* <h4>Privacy   Search    Contacts   Orders</h4>
+    <div class="prxgt-footer-links"><h4>Privacy</h4></div>
+        <div class="prxgt-footer-links"><h4>Search</h4></div>
+        <div class="prxgt-footer-links"><h4>Contacts</h4></div>
+        <div class="prxgt-footer-links"><h4>Orders</h4></div>*/
     $html .=
-        '<div class="prxgt-footer-links-block" id="prxgt-footer-links-block"> <div class="prxgt-footer-links"><h4>Privacy</h4>'.$column[1].'</div>'.
-        '<div class="prxgt-footer-links"><h4>Search</h4>'.$column[2].'</div>'.
-        '<div class="prxgt-footer-links"><h4>Contacts</h4>'.$column[3].'</div>'.
-        '<div class="prxgt-footer-links"><h4>Orders</h4>'.$column[4].'</div>
+        '<div class="prxgt-footer-links-block prxgtBottomLine" id="prxgt-footer-links-block">
+        <div data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' >
+        <div data-role="title">
+            <div>
+             <div class="prxgt-footer-links"><h4>Privacy</h4></div>
+             <div class="prxgt-footer-links"><h4>Search</h4></div>
+             <div class="prxgt-footer-links"><h4>Contacts</h4></div>
+             <div class="prxgt-footer-links"><h4>Orders</h4></div>
+            </div>
+        </div>
+        <div data-role="content">
+        <div class="prxgt-footer-links">'.$column[1].'</div>'.
+        '<div class="prxgt-footer-links">'.$column[2].'</div>'.
+        '<div class="prxgt-footer-links">'.$column[3].'</div>'.
+        '<div class="prxgt-footer-links">'.$column[4].'</div>
+        </div>
+        </div>
 
-        <div id="prxgt-back-top-button" style="display: none;"><a title="Top" href="#top">Top</a></div>
-
-        </div>';
+                <div id="prxgt-back-top-button" style="display: none;"><a title="Top" href="#top">Top</a></div>
+        </div>
+        ';
 
     $html .=
         '<div class="prxgt-footer-links-small-size-block"> <div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Privacy</a></h4></div>'.$columnSmallSize[1].'</div>'.
