MOBI-445	 # fixing 4 column in prxgtBottomLine

--- a/src/view/frontend/templates/footer_links.phtml
+++ b/src/view/frontend/templates/footer_links.phtml
@@ -49,9 +49,15 @@ if ($this->getLinks()) {
             /* padding-bottom: 140px; */
             display: none;
         }
-        .prxgt-footer-links {
+        .prxgt-footer-links-block .prxgt-footer-links {
             float: left;
             /* margin-right: 1.5%; */
+            /* width: 100%; */
+            width: 20%;
+        }
+        .prxgtBottomLine .prxgt-footer-links {
+            float: left;
+            margin-right: 1.5%;
             /* width: 100%; */
             width: 20%;
         }
