--- a/src/view/frontend/templates/footer_links.phtml
+++ b/src/view/frontend/templates/footer_links.phtml
@@ -5,77 +5,7 @@ $html = '';
 if ($this->getLinks()) {
     $html .= ($this->hasCssClass() ? '
     <style>
-    .prxgtBottomLine {
-    position: fixed;
-    z-index:99;
-    bottom: 0px;
-    padding-bottom: 0px;
-    width: 100%;
-    background-color: #818181;
-    }
-    #prxgt-back-top-button {
-    position: fixed;
-    z-index:99;
-    bottom: 40px;
-    left: 50%;
-    margin-left: 635px;
-    /*display: none;*/
-    width: 41px;
-    height: 31px;
-    padding-top: 11px;
-    color: #000080;
-
-    background: #D8D9DD;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#D8D9DD\', endColorstr=\'#ECEFF2\');
-    background: -webkit-gradient(linear, left top, left bottom, from(#d8d9dd), to(#eceff2));
-    background: -moz-linear-gradient(top, #d8d9dd, #eceff2);
-    background: -o-linear-gradient(top, #d8d9dd, #eceff2);
-    background: -ms-linear-gradient(top, #d8d9dd, #eceff2);
-    }
-    #prxgt-back-top-button a {
-    padding-left: 10px;
-    }
-    @media only screen and (min-width: 768px) {
-    div#prxgt-footer-links-block-sticky.prxgtBottomLine.prxgtHidden
-    {
-    display: none;
-    }
-        .prxgt-footer-links-block {
-            padding-bottom: 160px;
-            display: block;
-            width: 80%;
-        }
-        .prxgt-footer-links-small-size-block {
-            /* padding-bottom: 140px; */
-            display: none;
-        }
-        .prxgt-footer-links-block .prxgt-footer-links {
-            float: left;
-            /* margin-right: 1.5%; */
-            /* width: 100%; */
-            width: 20%;
-        }
-        .prxgtBottomLine .prxgt-footer-links {
-            float: left;
-            margin-right: 1.5%;
-            /* width: 100%; */
-            width: 20%;
-        }
-        .footer .bugs {
-        padding-bottom: 50px;
-        }
-    }
-    @media only screen and (max-width: 767px) {
-        .prxgt-footer-links-block {
-            display: none;
-        }
-        .prxgt-footer-links-small-size-block {
-            display: block;
-        }
-        .prxgt-footer-links {
-            width: 100%;
-        }
-    }
+    /* Place for operative applying styles */
     </style>' : '');
     $html .= '';
     $column[1] = '';
@@ -128,6 +58,10 @@ if ($this->getLinks()) {
     $columnSmallSize[3] .= '</ul>';
     $columnSmallSize[4] .= '</ul>';
 
+    /*
+     * Standart footer - id prxgt-footer-links-block
+     * Sticky block with links - id prxgt-footer-links-block-sticky
+     * */
     $html .=
         '<div class="prxgt-footer-links-block" id="prxgt-footer-links-block"> <div class="prxgt-footer-links"><h4>Privacy</h4>'.$column[1].'</div>'.
         '<div class="prxgt-footer-links"><h4>Search</h4>'.$column[2].'</div>'.
@@ -157,6 +91,7 @@ if ($this->getLinks()) {
         <div id="prxgt-back-top-button" style="display: none;"><a title="Top" href="#top">Top</a></div>
         ';
 
+    /* Links view for small resolution */
     $html .=
         '<div class="prxgt-footer-links-small-size-block"> <div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Privacy</a></h4></div>'.$columnSmallSize[1].'</div>'.
         '<div class="prxgt-footer-links" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' ><div data-role="title"><h4><a href="#">Search</a></h4></div>'.$columnSmallSize[2].'</div>'.
