--- a/src/web/css/source/prxgt_footer_links.less
+++ b/src/web/css/source/prxgt_footer_links.less
@@ -19,7 +19,7 @@
   color: #000080;
 
   background: #D8D9DD;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#D8D9DD\', endColorstr=\'#ECEFF2\');
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#D8D9DD', endColorstr='#ECEFF2');
   background: -webkit-gradient(linear, left top, left bottom, from(#d8d9dd), to(#eceff2));
   background: -moz-linear-gradient(top, #d8d9dd, #eceff2);
   background: -o-linear-gradient(top, #d8d9dd, #eceff2);
