--- a/src/web/css/source/prxgt_footer_links.less
+++ b/src/web/css/source/prxgt_footer_links.less
@@ -3,8 +3,15 @@
   z-index:99;
   bottom: 0px;
   padding-bottom: 0px;
-  width: 100%;
+  width: 60%;
   background-color: #818181;
+}
+.prxgtBottomLine #prxgt-footer-links-collapsible .prxgt-sticky-newsletter {
+  width: 32%;
+  float:right;
+}
+.prxgtBottomLine #prxgt-footer-links-collapsible .block.newsletter {
+  width: 100%;
 }
 #prxgt-back-top-button {
   position: fixed;
@@ -52,7 +59,7 @@
     float: left;
     margin-right: 1.5%;
     /* width: 100%; */
-    width: 20%;
+    width: 15%;
   }
   .footer .bugs {
     padding-bottom: 50px;
