--- a/web/css/source/praxigento.less
+++ b/web/css/source/praxigento.less
@@ -6,7 +6,7 @@
 .navigation .level0 > .level-top:hover,
 .navigation .level0 > .level-top.ui-state-focus,
 a:hover, .alink:hover,
-a:visited, .alink:visited,
+a:visited, .alink:visited
 {
   color: #D91809;
 }
