MOBI-1217 # Add theme module to Santegra project Theme Base refactoring

--- a/view/frontend/templates/footer_links.phtml
+++ b/view/frontend/templates/footer_links.phtml
@@ -1,4 +1,7 @@
 <?php
+/**
+ * Dmitrii Makhov <makhovdmitrii@inbox.ru>
+ */
 /* @var \Magento\Framework\View\Element\Html\Links $this */
 
 $html = '';
