--- a/web/css/source/prxgt_footer_links.less
+++ b/web/css/source/prxgt_footer_links.less
@@ -17,8 +17,8 @@
   position: fixed;
   z-index:99;
   bottom: 40px;
-  left: 50%;
-  margin-left: 635px;
+  left: 90%;
+  /*margin-left: 635px;*/
   /*display: none;*/
   width: 41px;
   height: 31px;
