MOBI-1246 # не работает proceed to chechout в попапе корзины

--- a/Magento_Theme/layout/default.xml
+++ b/Magento_Theme/layout/default.xml
@@ -10,6 +10,9 @@
     </head>
     <body>
         <referenceContainer name="header-wrapper">
+            <referenceBlock name="top.search" remove="true"/>
+            <block class="Magento\Framework\View\Element\Template" name="top.search1" as="topSearch1"
+                   template="Magento_Search::form.mini.phtml" before="minicart"/>
             <block class="Magento\Theme\Block\Html\Header\Logo" name="logo">
                 <arguments>
                     <argument name="logo_img_width" xsi:type="number">189</argument>
