--- a/web/css/source/prxgt_footer_links.less
+++ b/web/css/source/prxgt_footer_links.less
@@ -1,10 +1,47 @@
-.prxgtBottomLine {
-  position: fixed;
-  z-index:99;
-  bottom: 0px;
-  padding-bottom: 0px;
-  width: 60%;
-  background-color: #818181;
+@media only screen and (min-width: 768px)  and (max-width: 1340px) {
+  .prxgtBottomLine {
+    position: fixed;
+    z-index: 99;
+    bottom: 0px;
+    padding-bottom: 0px;
+    width: 97%;
+  }
+
+  .prxgtBottomLine .prxgt-footer-links {
+    float: left;
+    margin-right: 1.5%;
+    width: 14%;
+  }
+}
+
+@media only screen and (min-width: 1341px)  and (max-width: 1540px) {
+  .prxgtBottomLine {
+    position: fixed;
+    z-index: 99;
+    bottom: 0px;
+    padding-bottom: 0px;
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 1541px)  and (max-width: 1800px) {
+  .prxgtBottomLine {
+    position: fixed;
+    z-index: 99;
+    bottom: 0px;
+    padding-bottom: 0px;
+    width: 70%;
+  }
+}
+
+@media only screen and (min-width: 1801px) {
+  .prxgtBottomLine {
+    position: fixed;
+    z-index: 99;
+    bottom: 0px;
+    padding-bottom: 0px;
+    width: 60%;
+  }
 }
 .prxgtBottomLine #prxgt-footer-links-collapsible .prxgt-sticky-newsletter {
   width: 32%;
@@ -23,14 +60,6 @@
   width: 41px;
   height: 31px;
   padding-top: 11px;
-  color: #000080;
-
-  background: #D8D9DD;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#D8D9DD', endColorstr='#ECEFF2');
-  background: -webkit-gradient(linear, left top, left bottom, from(#d8d9dd), to(#eceff2));
-  background: -moz-linear-gradient(top, #d8d9dd, #eceff2);
-  background: -o-linear-gradient(top, #d8d9dd, #eceff2);
-  background: -ms-linear-gradient(top, #d8d9dd, #eceff2);
 }
 #prxgt-back-top-button a {
   padding-left: 10px;
