--- a/view/frontend/templates/footer_links.phtml
+++ b/view/frontend/templates/footer_links.phtml
@@ -3,7 +3,10 @@
  * Dmitrii Makhov <makhovdmitrii@inbox.ru>
  */
 /* @var \Magento\Framework\View\Element\Html\Links $this */
-
+$columnName1 = 'Privacy';
+$columnName2 = 'Search';
+$columnName3 = 'Contacts';
+$columnName4 = 'Orders';
 $html = '';
 if ($this->getLinks()) {
     $html .= ($this->hasCssClass() ? '
@@ -66,20 +69,20 @@ if ($this->getLinks()) {
      * Sticky block with links - id prxgt-footer-links-block-sticky
      * */
     $html .=
-        '<div class="prxgt-footer-links-block" id="prxgt-footer-links-block"> <div class="prxgt-footer-links"><h4>Privacy</h4>'.$column[1].'</div>'.
-        '<div class="prxgt-footer-links"><h4>Search</h4>'.$column[2].'</div>'.
-        '<div class="prxgt-footer-links"><h4>Contacts</h4>'.$column[3].'</div>'.
-        '<div class="prxgt-footer-links"><h4>Orders</h4>'.$column[4].'</div>
+        '<div class="prxgt-footer-links-block" id="prxgt-footer-links-block"> <div class="prxgt-footer-links"><h4>' . $this->__($columnName1) . '</h4>' . $column[1] . '</div>' .
+        '<div class="prxgt-footer-links"><h4>' . $this->__($columnName2) . '</h4>' . $column[2] . '</div>' .
+        '<div class="prxgt-footer-links"><h4>' . $this->__($columnName3) . '</h4>' . $column[3] . '</div>' .
+        '<div class="prxgt-footer-links"><h4>' . $this->__($columnName4) . '</h4>' . $column[4] . '</div>
         </div>'.
 
         '<div class="prxgtBottomLine prxgtHidden" id="prxgt-footer-links-block-sticky">
         <div id="prxgt-footer-links-collapsible" data-mage-init=\'{"collapsible":{ "active": false, "animate": 200, "collapsible": true}}\' >
         <div data-role="title">
             <div>
-             <div class="prxgt-footer-links"><h4>Privacy</h4></div>
-             <div class="prxgt-footer-links"><h4>Search</h4></div>
-             <div class="prxgt-footer-links"><h4>Contacts</h4></div>
-             <div class="prxgt-footer-links"><h4>Orders</h4></div>
+             <div class="prxgt-footer-links"><h4>' . $this->__($columnName1) . '</h4></div>
+             <div class="prxgt-footer-links"><h4>' . $this->__($columnName2) . '</h4></div>
+             <div class="prxgt-footer-links"><h4>' . $this->__($columnName3) . '</h4></div>
+             <div class="prxgt-footer-links"><h4>' . $this->__($columnName4) . '</h4></div>
         <div class="prxgt-sticky-newsletter">'.
         $this->getLayout()->createBlock("Magento\Newsletter\Block\Subscribe")->setTemplate("Magento_Newsletter::subscribe.phtml")->toHtml()
         .'</div>
