--- a/web/css/source/prxgt_footer_links.less
+++ b/web/css/source/prxgt_footer_links.less
@@ -69,7 +69,9 @@
   {
     display: none;
   }
-  .prxgt-footer-links-block {
+
+  .prxgt-footer-links-block,
+  .prxgt-footer-links-collapsible {
     padding-bottom: 160px;
     display: block;
     width: 80%;
@@ -95,7 +97,8 @@
   }
 }
 @media only screen and (max-width: 767px) {
-  .prxgt-footer-links-block {
+  .prxgt-footer-links-block,
+  .prxgt-footer-links-collapsible {
     display: none;
   }
   .prxgt-footer-links-small-size-block {
