MOBI-1281 # Return Policy instead of Orders

--- a/view/frontend/templates/footer_links.phtml
+++ b/view/frontend/templates/footer_links.phtml
@@ -3,10 +3,10 @@
  * Dmitrii Makhov <makhovdmitrii@inbox.ru>
  */
 /* @var \Magento\Framework\View\Element\Html\Links $this */
-$columnName1 = 'Privacy';
-$columnName2 = 'Search';
-$columnName3 = 'Contacts';
-$columnName4 = 'Orders';
+$columnName1 = 'PRXGT_Footer_Links_Column_Name_First';
+$columnName2 = 'PRXGT_Footer_Links_Column_Name_Second';
+$columnName3 = 'PRXGT_Footer_Links_Column_Name_Third';
+$columnName4 = 'PRXGT_Footer_Links_Column_Name_Fourth';
 $html = '';
 if ($this->getLinks()) {
     $html .= ($this->hasCssClass() ? '
