MOBI-1314 Remove "Help us keep magento healthy" line

--- a/Magento_Theme/layout/default.xml
+++ b/Magento_Theme/layout/default.xml
@@ -29,5 +29,6 @@
                 <argument name="template" xsi:type="string">Praxigento_ThemeBase::footer_links.phtml</argument>
             </arguments>
         </referenceBlock>
+        <referenceBlock name="report.bugs" remove="true" />
     </body>
 </page>
