SUPP-706 install hamster

--- a/web/css/source/prxgt_footer_links.less
+++ b/web/css/source/prxgt_footer_links.less
@@ -43,16 +43,19 @@
     width: 60%;
   }
 }
+
 .prxgtBottomLine #prxgt-footer-links-collapsible .prxgt-sticky-newsletter {
   width: 32%;
-  float:right;
+  float: right;
 }
+
 .prxgtBottomLine #prxgt-footer-links-collapsible .block.newsletter {
   width: 100%;
 }
+
 #prxgt-back-top-button {
   position: fixed;
-  z-index:99;
+  z-index: 99;
   bottom: 40px;
   left: 90%;
   /*margin-left: 635px;*/
@@ -61,12 +64,13 @@
   height: 31px;
   padding-top: 11px;
 }
+
 #prxgt-back-top-button a {
   padding-left: 10px;
 }
+
 @media only screen and (min-width: 768px) {
-  div#prxgt-footer-links-block-sticky.prxgtBottomLine.prxgtHidden
-  {
+  div#prxgt-footer-links-block-sticky.prxgtBottomLine.prxgtHidden {
     display: none;
   }
 
@@ -75,33 +79,40 @@
     display: block;
     width: 80%;
   }
+
   .prxgt-footer-links-small-size-block {
     /* padding-bottom: 140px; */
     display: none;
   }
+
   .prxgt-footer-links-block .prxgt-footer-links {
     float: left;
     /* margin-right: 1.5%; */
     /* width: 100%; */
     width: 20%;
   }
+
   .prxgtBottomLine .prxgt-footer-links {
     float: left;
     margin-right: 1.5%;
     /* width: 100%; */
     width: 15%;
   }
+
   .footer .bugs {
     padding-bottom: 50px;
   }
 }
+
 @media only screen and (max-width: 767px) {
   .prxgt-footer-links-block {
     display: none;
   }
+
   .prxgt-footer-links-small-size-block {
     display: block;
   }
+
   .prxgt-footer-links {
     width: 100%;
   }
