--- a/web/css/critical.css
+++ b/web/css/critical.css
@@ -1,2 +1,4 @@
 /* this script is base for critical styles, see https://devdocs.magento.com/guides/v2.3/frontend-dev-guide/css-topics/css-critical-path.html */
-BODY {}
+.this-style-does-not-exist {
+    clear: both;
+}
