SAN-927 # email update

--- a/view/frontend/templates/footer_links.phtml
+++ b/view/frontend/templates/footer_links.phtml
@@ -1,6 +1,6 @@
 <?php
 /**
- * Dmitrii Makhov <makhovdmitrii@inbox.ru>
+ * Dmitrii Makhov <dmitriimakhov@gmail.com>
  */
 /* @var \Magento\Framework\View\Element\Html\Links $this */
 $columnName1 = 'PRXGT_Footer_Links_Column_Name_First';
